app/public/stylesheets/sass/_components/_default.scss
* {
  box-sizing: border-box;
  cursor: default;
}

html {
  height: 100%;
}

body {
  background: $bodyBackground;
  font: 62.5% 'Open Sans', helvetica, sans-serif, arial !important;
  color: $defaultColor;
  height: 100%;
  -webkit-user-select: none;
  letter-spacing: 1px;
}

a {
  color: $linkColor;
  text-decoration: none;
  transition: $transitionValue;
}

a:hover {
  color: #fff;
}

ul,
ol,
li {
  list-style: none;
  margin: 0;
  padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  color: #fff;
  font-weight: 600;
}

input[type=text],
input[type=search],
input[type=email] {
  border: 1px solid #000;
  background: #FFFFFF;
  display: inline-block;
  height: 25px;
  padding: 0 0 0 5px;
  outline: none;
  color: #000000;
  font-size: 12px;
  transition: $transitionValue;
  border-radius: 5px;

  &:focus {
    box-shadow: 0 0 5px $scColor;
  }
}

input[type=range]{
  -webkit-appearance: none;
}

input[type=range]::-webkit-slider-runnable-track {
  width: 300px;
  height: 5px;
  background: $bodyBackground;
  border: none;
  border-radius: 2px;
}

input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  border: none;
  height: 13px;
  width: 13px;
  border-radius: 50%;
  background: $bodyBackground;
  margin-top: -4px;
}

input[type=range]:focus {
  outline: none;
}

input[type=range]:focus::-webkit-slider-runnable-track {
  background: $bodyBackground;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  background-color: #222326;
}

::-webkit-scrollbar {
  width: 10px;
  background-color: #222326;

}

::-webkit-scrollbar-thumb {
  background-color: #333;
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

.fa{
    cursor: pointer;
}

